<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Mista Reader</string>
    <string name="sSettings">Настройки</string>
    <string name="sTheme">Тема оформления</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="sAllSections">Mista.ru</string>
    <string name="sNavDrawerAll">Все</string>
    <string name="sNavDrawer1C">1C</string>
    <string name="sNavDrawerIT">IT</string>
    <string name="sNavDrawerJOB">JOB</string>
    <string name="sNavDrawerLIFE">LIFE</string>
    <string name="sNavDrawerSect1">ФОРУМЫ</string>
    <string name="sNavDrawerSect2">НАСТРОЙКИ</string>
    <string name="sLoading">Загрузка…</string>


    <string name="sAccount">Аккаунт</string>
    <string name="sNotAuthorized">&lt;Не авторизован&gt;</string>
    <string name="sLogin">Логин</string>
    <string name="sPassword">Пароль</string>
    <string name="sAuthorizationError">Ошибка авторизации</string>

    <string name="sDoLogin">Войти</string>
    <string name="sCancel">Отмена</string>

	<string name="sMyTopics">Мои темы</string>
    <string name="sMyTopics2">Темы с участием</string>

	<string name="sNewTopic">Новая тема</string>
    <string name="sSubject">Тема</string>
    <string name="sMessage">Сообщение</string>
    <string name="sCreate">Создать</string>

    <string name="sNewMessage">Новое сообщение</string>
	<string name="sNewMessages">Новые сообщения:</string>

    <string name="sMenuGoToFirstMessage">К первому сообщению</string>
	<string name="sMenuGoToLastMessage">К последнему сообщению</string>
	<string name="sAddToSubscription">Подписаться на тему</string>
	<string name="sRemoveFromSubscriptions">Удалить из подписок</string>

    <string name="sMenuRelyToThis">Ответить</string>

    <string name="sIsVote">Голосование</string>
	<string name="sVote1">Вариант 1</string>
	<string name="sVote2">Вариант 2</string>
	<string name="sVote3">Вариант 3</string>
	<string name="sVote4">Вариант 4</string>
	<string name="sVote5">Вариант 5</string>
	<string name="sVoteResults">Результаты голосования:</string>
	<string name="sVoteHint">Пункт голосования</string>
	<string name="sVoteError">Укажите как минимум 2 варианта голосования!</string>
	<string name="sTopicError">Введите тему</string>
	<string name="sMessageError">Введите текст сообщения</string>
	<string name="sError">Ошибка!</string>


    <string name="sAbout">О программе</string>

	<string name="sAboutDetailsVersion">Версия: 2.2</string>
	<string name="sAboutDetails">Разработка: vhl</string>
	<string name="sAboutDetails2">При поддержке: Asmody</string>
	<string name="sAboutMarket">Оценить приложение</string>

	<string name="sTotalNew">Всего новых:</string>

	<string name="sMarkAll">Пометить все как прочтенные</string>

	<string name="sOther">Прочее</string>
	<string name="sSubscriptions">Подписки</string>
	<string name="sSubscriptionsUse">Использовать подписки</string>
	<string name="sSubscriptionsNew">Новые сообщения в подписках</string>
	<string name="sSubscriptionsUseD">Проверять наличие новых сообщений в темах</string>
	<string name="sSubscriptionsInterval">Периодичность опросов</string>

	<string name="sNotificationsShowInBar">Уведомления</string>
	<string name="sNotificationsShowInBarD">Выводить всплывающие уведомления в строке статуса</string>
	<string name="sNotificationsVibrate">Вибрация</string>
	<string name="sNotificationsVibrateD">Вибрировать при уведомлениях</string>
	<string name="sNotificationsSound">Звук</string>
	<string name="sNotificationsSoundD">Звук при уведомлениях</string>
	<string name="sNotificationsLED">Световой индикатор</string>
	<string name="sNotificationsLEDD">Использовать световую индикацию при уведомлениях</string>

	<string name="sReload">Обновить</string>
	<string name="sReloadSections">Обновить секции</string>
	<string name="sReloadSectionsD">Загрузить названия секций с сервера</string>


    <!-- Диалоговые сообщения-->
	<string name="sAuthorizationInProgress">Авторизация…</string>
	<string name="sAddingInProgress">Добавление…</string>


    <string name="transition_avatar">transition_avatar</string>

</resources>