<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/sNavDrawerSect1">
        <menu>
            <group
                android:id="@+id/general_items"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_all"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sNavDrawerAll" />
                <item
                    android:id="@+id/nav_1c"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sNavDrawer1C" />
                <item
                    android:id="@+id/nav_it"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sNavDrawerIT" />
                <item
                    android:id="@+id/nav_job"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sNavDrawerJOB" />
                <item
                    android:id="@+id/nav_life"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sNavDrawerLIFE" />
            </group>
        </menu>
    </item>
    <group>
        <item
            android:id="@+id/nav_my_topics"
            android:icon="@drawable/ic_list"
            android:title="@string/sMyTopics2" />
        <item
            android:id="@+id/nav_subscriptions"
            android:visible="false"
            android:icon="@drawable/ic_list"
            android:title="@string/sSubscriptions" />
    </group>
    <item android:title="@string/sNavDrawerSect2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/sSettings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/sAbout" />
            </group>
        </menu>
    </item>

</menu>
