<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginStart="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/mr"/>

        <TextView
            android:id="@+id/tvVote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextDefault.Title" />

    </LinearLayout>

    <TextView
        android:id="@+id/textAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sAboutDetailsVersion"
        android:textAppearance="@style/TextDefault.Large" />

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sAboutDetails"
        android:textAppearance="@style/TextDefault.Large" />

    <TextView
        android:id="@+id/textAbout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sAboutDetails2"
        android:textAppearance="@style/TextDefault.Large" />

    <Button
        android:id="@+id/buttonMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sAboutMarket"
        android:textSize="@dimen/text_main_size" />

</LinearLayout>